--- a/src/components/Styles/_utils.scss
+++ b/src/components/Styles/_utils.scss
@@ -13,19 +13,19 @@
 
 // Importants to override styles
 .flex-center {
-  align-items: center !important;
-  display: flex !important;
-  justify-content: center !important;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 .hidden-on-mobile {
   @include media('<desktop') {
-    display: none !important;
+    display: none;
   }
 }
 .hidden-on-desktop {
   @include media('>=desktop') {
-    display: none !important;
+    display: none;
   }
 }
 
